--- a/style.css
+++ b/style.css
@@ -269,6 +269,7 @@ section {
   filter: grayscale(100%) brightness(0.8) contrast(1.2) sepia(100%) hue-rotate(90deg) saturate(3);
   mix-blend-mode: luminosity;
   /* Blends with the background */
+  transform: scaleX(-1);
 
   transition: all 0.5s cubic-bezier(0.68, -0.55, 0.27, 1.55);
 }
