--- a/style.css
+++ b/style.css
@@ -261,7 +261,8 @@ section {
 .profile-img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
+  object-position: center top;
   border-radius: 50%;
 
   /* Backend Identity Style */
