--- a/style.css
+++ b/style.css
@@ -261,8 +261,7 @@ section {
 .profile-img {
   width: 100%;
   height: 100%;
-  object-fit: contain;
-  object-position: center top;
+  object-fit: cover;
   border-radius: 50%;
 
   /* Backend Identity Style */
